// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelInstanceDocumentHandler applies anchor commit correctly 1`] = `
Object {
  "anchorProof": Object {
    "chainId": "fakechain:123",
  },
  "anchorStatus": 3,
  "content": Object {
    "myData": 1,
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 0,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 1,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts66jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1615799679,
      "type": 2,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies commit made using an old key if it is applied within the revocation period 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 0,
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "timestamp": 1647037687,
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies deterministic genesis commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {},
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqceravogecfyp4jyciu7cqljixlpymtmisoxikuxyzikxkups6afcncha",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies genesis commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 0,
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies genesis commit correctly with small allowable content length 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": "abcdefghijk",
  },
  "log": Array [
    Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts77jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqceravogecfyp4jyciu7cqljixlpymtmisoxikuxyzikxkups6afcnchq",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler applies signed commit correctly 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 1,
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;

exports[`ModelInstanceDocumentHandler multiple consecutive updates 1`] = `
Object {
  "anchorStatus": 0,
  "content": Object {
    "myData": 2,
  },
  "log": Array [
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts33jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 0,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts44jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
    Object {
      "cid": Object {
        "/": "bafybeig6xv5nwphfmvcnektpnojts55jqcuam7bmye2pb54adnrtccjlsu",
      },
      "type": 1,
    },
  ],
  "metadata": Object {
    "controllers": Array [
      "did:3:k2t6wyfsu4pg0t2n4j8ms3s33xsgqjhtto04mvq8w5a2v5xo48idyz38l7ydki",
    ],
    "model": StreamID {
      "_cid": Object {
        "/": "bagcqcera7y53g6hy35jak6zwdgniw7a6qzgbcdvnsfaay5fw5wxbkgxbpl3q",
      },
      "_tag": Symbol(@ceramicnetwork/streamid/StreamID),
      "_type": 2,
    },
  },
  "signature": 2,
  "type": 3,
}
`;
